fdo#75872: ODF import: fix up graphics defaults stroke/fill colors

These have changed a few times, notably in LO 4.0 with commit
895890563cb0cc5fa872bdfd06918a46cdda172d and AOO 4.0 with commit
c0eb5e7772c848806db8ab461f77f9549c1d8b2b; unfortunately historic OOo and
current AOO do not write the values into ODF files, whereas LO 4.x does
(probably by accident, since 45d3577bc5726eee44f491fd30a7f11dc428431a
by design).

Try to set the defaults depending on the generator; since the defaults
are not specified by ODF they are implementation defined anyway so this
should be OK.

Change-Id: I1270d6e0cdeea5cb493724a0998f661a0cf644f1