sw/qa/extras/odfimport/odfimport.cxx
@@ -279,6 +279,26 @@ DECLARE_ODFIMPORT_TEST(testFdo56272, "fdo56272.odt")
     CPPUNIT_ASSERT_EQUAL(sal_Int32(422), xShape->getPosition().Y); // Was -2371
 }
 
+DECLARE_ODFIMPORT_TEST(testFdo75872_ooo33, "fdo75872_ooo33.odt")
+{
+    // graphics default style: line color and fill color changed
+    uno::Reference<drawing::XShape> xShape = getShape(1);
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(COL_BLACK),
+           getProperty<sal_Int32>(xShape, "LineColor"));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(RGB_COLORDATA(153, 204, 255)),
+           getProperty<sal_Int32>(xShape, "FillColor"));
+}
+
+DECLARE_ODFIMPORT_TEST(testFdo75872_aoo40, "fdo75872_aoo40.odt")
+{
+    // graphics default style: line color and fill color changed
+    uno::Reference<drawing::XShape> xShape = getShape(1);
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(RGB_COLORDATA(128, 128, 128)),
+           getProperty<sal_Int32>(xShape, "LineColor"));
+    CPPUNIT_ASSERT_EQUAL(sal_Int32(RGB_COLORDATA(0xCF, 0xE7, 0xF5)),
+           getProperty<sal_Int32>(xShape, "FillColor"));
+}
+
 DECLARE_ODFIMPORT_TEST(testFdo55814, "fdo55814.odt")
 {
     uno::Reference<text::XTextFieldsSupplier> xTextFieldsSupplier(mxComponent, uno::UNO_QUERY);
